[package]
name = "struct-to-json-db-macro"
version = "0.1.7"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE-2.0.txt"
keywords = ["struct-to-json-db"]
description = "macro for struct-to-json-db crate"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.72", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"
regex = "1.11.1"